# softnet

./: .cirrus.yml  .gitignore  .goreleaser.yml  Cargo.toml  README.md
.cargo/: config.toml
.codex/skills/pr-fixes/: SKILL.md
.github/: dependabot.yml
.github/workflows/: build.yml
lib/: dhcp_snooper.rs  host.rs  mod.rs  poller.rs  vm.rs
lib/proxy/: exposed_port.rs  host.rs  mod.rs  port_forwarder.rs  udp_packet_helper.rs  vm.rs
src/: main.rs
