[package]
name = "softnet"
version = "0.1.0"
publish = false
edition = "2021"

[lib]
path = "lib/mod.rs"

[profile.release-with-debug]
inherits = "release"
debug = true

[dependencies]
smoltcp = "0.8.1"
libc = "0.2.126"
polling = "2.2.0"
dhcproto = "0.7.0"
vmnet = "0.1.1"
clap = { version = "3.1.18", features = ["derive"] }
mac_address = "1.1.3"
privdrop = "0.5.2"
anyhow = { version = "1.0.66", features = ["backtrace"] }
ip_network = "0.4.1"
users = "0.11.0"
system-configuration = "0.5.0"
num_enum = "0.5.7"
sentry = "0.29.1"
sentry-anyhow = { version = "0.29.1", features = ["backtrace"] }
